js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype/not-error-object.js
assert
.
sameValue
(
Object
.
prototype
.
toString
.
call
(
SyntaxError
.
prototype
)
"
[
object
Object
]
"
)
;
reportCompare
(
0
0
)
;
